--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
 </head>
 <body>
     <header>
-        <h1><a href="#">TITLE</a></h1>
         <nav>
             <ul class="gnb">
-                <li><a href="#">INTRO</a></li>
+                <li>
+                    <a href="#">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </a>
+                </li>
+                <li><a href="#">MAIN</a></li>
                 <li>
                     <a href="#">PORTFOLIO</a>
                     <div class="lnb">
@@ -28,6 +34,12 @@
             </ul>
         </nav>
     </header>
+    <div class="curcle_bar">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
     <main>
         <div class="intro">
             <div class="left">
@@ -52,37 +64,38 @@
         </div>
         <div class="portfolio">
             <div class="title">
-                <h1>CloneCodding</h1>
+                <!-- <h1>PORTFOLIO</h1> -->
+                <!-- <p>CloneCodding</p> -->
             </div> 
             <div class="container">
                 <div class="contents contents1">
                     <div class="text">
                         <h1>My Project</h1>
-                        <p>CloneCodding</p>
+                        <p></p>
                     </div>
                     <div class="list">
                         <div class="info">
-                            <h3>ETUDE HOUSE</h3>
-                            <p>클론코딩으로 제작한 사이트를 소개합니다. 오리지널 사이트와 비교하여 어떤 부분을 수정했는지 확인해보세요!</p>
+                            <h3>CloneCodding</h3>
+                            <p>#1 ETUDE HOUSE</p>
                         </div>
                         <div class="link_area">
                             <div class="box box1">
                                 <div class="top">
-                                    <a href="#" class="logo"><img src="./images/etude/img_logo_main_2023-1.png" alt=""></a>
-                                    <a href="#" class="arrow"><img src="./images/etude/right-arrow_4159711.png" alt=""></a>
+                                    <a href="#" class="logo"><img src="./images/etude/faviconV2.png" alt=""></a>
+                                    <a href="#" class="arrow"><img src="./images/etude/arrow_10537863.png" alt=""></a>
                                 </div>
                                 <div class="comment">
-                                    <p>클론코딩 사이트로 링크 이동</p>
+                                    <p>사이트 보러 가기</p>
                                     <p>직접 작업한 클론코딩 사이트 입니다.</p>
                                 </div>
                             </div>
                             <div class="box box2">
                                 <div class="top">
-                                    <a href="#" class="logo"><img src="./images/etude/img_logo_main_2023-1.png" alt=""></a>
-                                    <a href="#" class="arrow"><img src="./images/etude/right-arrow_4159711.png" alt=""></a>
+                                    <a href="#" class="logo"><img src="./images/etude/faviconV2.png" alt=""></a>
+                                    <a href="#" class="arrow"><img src="./images/etude/arrow_10537863.png" alt=""></a>
                                 </div>
                                 <div class="comment">
-                                    <p>클론코딩 상세 기획서</p>
+                                    <p>기획서 보러 가기</p>
                                     <p>어떤식으로 진행하게 되었는지 소개하는 페이지 입니다.</p>
                                 </div>
                             </div>
@@ -91,32 +104,32 @@
                 </div>
                 <div class="contents contents2">
                     <div class="text">
-                        <h1>My Project</h1>
-                        <p>CloneCodding</p>
+                        <h1>Team Project</h1>
+                        <p></p>
                     </div>
                     <div class="list">
                         <div class="info">
-                            <h3>ETUDE HOUSE</h3>
-                            <p>클론코딩으로 제작한 사이트를 소개합니다. 오리지널 사이트와 비교하여 어떤 부분을 수정했는지 확인해보세요!</p>
+                            <h3>CloneCodding</h3>
+                            <p>#2 VIRENS</p>
                         </div>
                         <div class="link_area">
                             <div class="box box1">
                                 <div class="top">
-                                    <a href="#" class="logo"><img src="./images/etude/img_logo_main_2023-1.png" alt=""></a>
-                                    <a href="#" class="arrow"><img src="./images/etude/right-arrow_4159711.png" alt=""></a>
+                                    <a href="#" class="logo"><img src="./images/virens/231123_app_logo.png" alt=""></a>
+                                    <a href="#" class="arrow"><img src="./images/etude/arrow_10537863.png" alt=""></a>
                                 </div>
                                 <div class="comment">
-                                    <p>클론코딩 사이트로 링크 이동</p>
+                                    <p>사이트 보러 가기</p>
                                     <p>직접 작업한 클론코딩 사이트 입니다.</p>
                                 </div>
                             </div>
                             <div class="box box2">
                                 <div class="top">
-                                    <a href="#" class="logo"><img src="./images/etude/img_logo_main_2023-1.png" alt=""></a>
-                                    <a href="#" class="arrow"><img src="./images/etude/right-arrow_4159711.png" alt=""></a>
+                                    <a href="#" class="logo"><img src="./images/virens/231123_app_logo.png" alt=""></a>
+                                    <a href="#" class="arrow"><img src="./images/etude/arrow_10537863.png" alt=""></a>
                                 </div>
                                 <div class="comment">
-                                    <p>클론코딩 상세 기획서</p>
+                                    <p>기획서 보러 가기</p>
                                     <p>어떤식으로 진행하게 되었는지 소개하는 페이지 입니다.</p>
                                 </div>
                             </div>
@@ -125,32 +138,32 @@
                 </div>
                 <div class="contents contents3">
                     <div class="text">
-                        <h1>My Project</h1>
-                        <p>CloneCodding</p>
+                        <h1>Team Project</h1>
+                        <p></p>
                     </div>
                     <div class="list">
                         <div class="info">
-                            <h3>ETUDE HOUSE</h3>
-                            <p>클론코딩으로 제작한 사이트를 소개합니다. 오리지널 사이트와 비교하여 어떤 부분을 수정했는지 확인해보세요!</p>
+                            <h3>CloneCodding</h3>
+                            <p>#3 NAME</p>
                         </div>
                         <div class="link_area">
                             <div class="box box1">
                                 <div class="top">
-                                    <a href="#" class="logo"><img src="./images/etude/img_logo_main_2023-1.png" alt=""></a>
-                                    <a href="#" class="arrow"><img src="./images/etude/right-arrow_4159711.png" alt=""></a>
+                                    <a href="#" class="logo"><img src="./images/virens/231123_app_logo.png" alt=""></a>
+                                    <a href="#" class="arrow"><img src="./images/etude/arrow_10537863.png" alt=""></a>
                                 </div>
                                 <div class="comment">
-                                    <p>클론코딩 사이트로 링크 이동</p>
+                                    <p>사이트 보러 가기</p>
                                     <p>직접 작업한 클론코딩 사이트 입니다.</p>
                                 </div>
                             </div>
                             <div class="box box2">
                                 <div class="top">
-                                    <a href="#" class="logo"><img src="./images/etude/img_logo_main_2023-1.png" alt=""></a>
-                                    <a href="#" class="arrow"><img src="./images/etude/right-arrow_4159711.png" alt=""></a>
+                                    <a href="#" class="logo"><img src="./images/virens/231123_app_logo.png" alt=""></a>
+                                    <a href="#" class="arrow"><img src="./images/etude/arrow_10537863.png" alt=""></a>
                                 </div>
                                 <div class="comment">
-                                    <p>클론코딩 상세 기획서</p>
+                                    <p>기획서 보러 가기</p>
                                     <p>어떤식으로 진행하게 되었는지 소개하는 페이지 입니다.</p>
                                 </div>
                             </div>
@@ -159,7 +172,38 @@
                 </div>
             </div>
         </div>
-        <div class="profile"></div>
+        <div class="profile">
+            <div class="about_title">
+                <h1>About</h1>
+            </div>
+            <div class="contaienr">
+                <div class="left_img">
+                    <img src="./images/about/avatar.png" alt="">
+                </div>
+                <div class="info">
+                    <div class="skill">
+                        <h3>SKILL</h3>
+                        <!-- <a href="#"><img src="./images/skill_icon/html_2.png" alt=""></a>
+                        <a href="#"><img src="./images/skill_icon/css2.png" alt=""></a>
+                        <a href="#"><img src="./images/skill_icon/js1.png" alt=""></a>
+                        <a href="#"><img src="./images/skill_icon/figma1.png" alt=""></a>
+                        <a href="#"><img src="./images/skill_icon/github1.png" alt=""></a>
+                        <a href="#"><img src="./images/skill_icon/notion1.png" alt=""></a>
+                        <a href="#"><img src="./images/skill_icon/api1.png" alt=""></a>
+                        <a href="#"><img src="./images/skill_icon/ph1.png" alt=""></a>
+                        <a href="#"><img src="./images/skill_icon/illustrator.png" alt=""></a> -->
+                    </div>
+                    <div class="skill">
+                        <h3>SKILL</h3>
+                        <a href="#"><img src="#" alt=""></a>
+                    </div>
+                    <div class="skill">
+                        <h3>SKILL</h3>
+                        <a href="#"><img src="#" alt=""></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <script src="./script/script.js"></script>
 </body>
