--- a/index.html
+++ b/index.html
@@ -3,208 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="2024년 프론트엔드 신입 김은지 포트폴리오입니다.">
-    <meta name="keywords" content="프론트엔드, frontend,html,css,javascript">
+    <meta name="description" content="2024년 | 프론트엔드 신입 | 웹디자이너 경력 | 김은지 포트폴리오입니다.">
+    <!-- <meta name="keywords" content="프론트엔드, frontend,html,css,javascript"> -->
+    <!-- font -->
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;0,9..40,1000;1,9..40,200;1,9..40,300;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,800;1,9..40,900;1,9..40,1000&family=Noto+Sans+KR:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- font-family: 'DM Sans', 'Noto Sans KR', sans-serif; -->
+    <!-- link -->
     <title>김은지 포트폴리오</title>
     <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/portfolio.css">
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
     <header>
+        <div class="menu_bar">
+            <a href="#">
+                <span></span>
+                <span></span>
+                <span></span>
+            </a>
+        </div>
+        <div class="logo_toggle">
+            <div class="toggle_bg">
+                <a href="#" class="toggle_active">
+                    <p>front-end developer</p>
+                </a>
+                <a href="#">
+                    <p>web designer</p>
+                </a>
+            </div>
+        </div>
         <nav>
-            <ul class="gnb">
-                <li>
-                    <a href="#">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </a>
-                </li>
+            <ul>
                 <li><a href="#">MAIN</a></li>
-                <li>
-                    <a href="#">PORTFOLIO</a>
-                    <div class="lnb">
-                        <a href="#">My Project</a>
-                        <a href="#">Team Project</a>
-                    </div>
-                </li>
+                <li><a href="#">PORTFOLIO<span>(Developer)</span></a></li>
+                <li><a href="#">PORTFOLIO<span>(Desinger)</span></a></li>
+                <li><a href="#">PROFILE</a></li>
                 <li><a href="#">ABOUT</a></li>
             </ul>
         </nav>
     </header>
-    <div class="curcle_bar">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
     <main>
-        <div class="intro">
-            <div class="left">
-                <h1>2024</h1>
-                <h1>PORTFOLIO</h1>
-            </div>
-            <div class="right">
-                <div class="text">
-                    <h2>front-end</h2>
-                    <h2>developer</h2>
-                    <h3>EUNJI KIM</h3>
-                </div>
-                <div class="shape">
-                    <span class="one"></span>
-                    <span class="arr">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </span>
-                </div>
+        <div class="area intro">
+            <h1>PORTFOLIO</h1>
+            <p>front-end developer</p>
+            <div class="img_animation">
+                <a href="#"><img src="#" alt="">img</a>
+                <a href="#"><img src="#" alt="">img</a>
+                <a href="#"><img src="#" alt="">img</a>
             </div>
         </div>
-        <div class="portfolio">
-            <div class="title">
-                <!-- <h1>PORTFOLIO</h1> -->
-                <!-- <p>CloneCodding</p> -->
-            </div> 
-            <div class="container">
-                <div class="contents contents1">
-                    <div class="text">
-                        <h1>My Project</h1>
-                        <p></p>
-                    </div>
-                    <div class="list">
-                        <div class="info">
-                            <h3>CloneCodding</h3>
-                            <p>#1 ETUDE HOUSE</p>
-                        </div>
-                        <div class="link_area">
-                            <div class="box box1">
-                                <div class="top">
-                                    <a href="#" class="logo"><img src="./images/etude/faviconV2.png" alt=""></a>
-                                    <a href="#" class="arrow"><img src="./images/etude/arrow_10537863.png" alt=""></a>
-                                </div>
-                                <div class="comment">
-                                    <p>사이트 보러 가기</p>
-                                    <p>직접 작업한 클론코딩 사이트 입니다.</p>
-                                </div>
-                            </div>
-                            <div class="box box2">
-                                <div class="top">
-                                    <a href="#" class="logo"><img src="./images/etude/faviconV2.png" alt=""></a>
-                                    <a href="#" class="arrow"><img src="./images/etude/arrow_10537863.png" alt=""></a>
-                                </div>
-                                <div class="comment">
-                                    <p>기획서 보러 가기</p>
-                                    <p>어떤식으로 진행하게 되었는지 소개하는 페이지 입니다.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="contents contents2">
-                    <div class="text">
-                        <h1>Team Project</h1>
-                        <p></p>
-                    </div>
-                    <div class="list">
-                        <div class="info">
-                            <h3>CloneCodding</h3>
-                            <p>#2 VIRENS</p>
-                        </div>
-                        <div class="link_area">
-                            <div class="box box1">
-                                <div class="top">
-                                    <a href="#" class="logo"><img src="./images/virens/231123_app_logo.png" alt=""></a>
-                                    <a href="#" class="arrow"><img src="./images/etude/arrow_10537863.png" alt=""></a>
-                                </div>
-                                <div class="comment">
-                                    <p>사이트 보러 가기</p>
-                                    <p>직접 작업한 클론코딩 사이트 입니다.</p>
-                                </div>
-                            </div>
-                            <div class="box box2">
-                                <div class="top">
-                                    <a href="#" class="logo"><img src="./images/virens/231123_app_logo.png" alt=""></a>
-                                    <a href="#" class="arrow"><img src="./images/etude/arrow_10537863.png" alt=""></a>
-                                </div>
-                                <div class="comment">
-                                    <p>기획서 보러 가기</p>
-                                    <p>어떤식으로 진행하게 되었는지 소개하는 페이지 입니다.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="contents contents3">
-                    <div class="text">
-                        <h1>Team Project</h1>
-                        <p></p>
-                    </div>
-                    <div class="list">
-                        <div class="info">
-                            <h3>CloneCodding</h3>
-                            <p>#3 NAME</p>
-                        </div>
-                        <div class="link_area">
-                            <div class="box box1">
-                                <div class="top">
-                                    <a href="#" class="logo"><img src="./images/virens/231123_app_logo.png" alt=""></a>
-                                    <a href="#" class="arrow"><img src="./images/etude/arrow_10537863.png" alt=""></a>
-                                </div>
-                                <div class="comment">
-                                    <p>사이트 보러 가기</p>
-                                    <p>직접 작업한 클론코딩 사이트 입니다.</p>
-                                </div>
-                            </div>
-                            <div class="box box2">
-                                <div class="top">
-                                    <a href="#" class="logo"><img src="./images/virens/231123_app_logo.png" alt=""></a>
-                                    <a href="#" class="arrow"><img src="./images/etude/arrow_10537863.png" alt=""></a>
-                                </div>
-                                <div class="comment">
-                                    <p>기획서 보러 가기</p>
-                                    <p>어떤식으로 진행하게 되었는지 소개하는 페이지 입니다.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        <div class="area port_developer">
+            <div class="developer_top">
+
             </div>
+            <div class="developer_container"></div>
         </div>
-        <div class="profile">
-            <div class="about_title">
-                <h1>About</h1>
-            </div>
-            <div class="contaienr">
-                <div class="left_img">
-                    <img src="./images/about/avatar.png" alt="">
-                </div>
-                <div class="info">
-                    <div class="skill">
-                        <h3>SKILL</h3>
-                        <!-- <a href="#"><img src="./images/skill_icon/html_2.png" alt=""></a>
-                        <a href="#"><img src="./images/skill_icon/css2.png" alt=""></a>
-                        <a href="#"><img src="./images/skill_icon/js1.png" alt=""></a>
-                        <a href="#"><img src="./images/skill_icon/figma1.png" alt=""></a>
-                        <a href="#"><img src="./images/skill_icon/github1.png" alt=""></a>
-                        <a href="#"><img src="./images/skill_icon/notion1.png" alt=""></a>
-                        <a href="#"><img src="./images/skill_icon/api1.png" alt=""></a>
-                        <a href="#"><img src="./images/skill_icon/ph1.png" alt=""></a>
-                        <a href="#"><img src="./images/skill_icon/illustrator.png" alt=""></a> -->
-                    </div>
-                    <div class="skill">
-                        <h3>SKILL</h3>
-                        <a href="#"><img src="#" alt=""></a>
-                    </div>
-                    <div class="skill">
-                        <h3>SKILL</h3>
-                        <a href="#"><img src="#" alt=""></a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div class="area port_designer"></div>
+        <div class="area profile"></div>
+        <div class="area about"></div>
     </main>
+    <footer></footer>
     <script src="./script/script.js"></script>
 </body>
 </html> 
