--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,  minimum-scale=1, maximum-scale=1">
     <meta name="description" content="2024년 | 프론트엔드 신입 | 웹디자이너 경력 | 김은지 포트폴리오입니다.">
     <!-- <meta name="keywords" content="프론트엔드, frontend,html,css,javascript"> -->
     <!-- font -->
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;0,9..40,1000;1,9..40,200;1,9..40,300;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,800;1,9..40,900;1,9..40,1000&family=Noto+Sans+KR:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- font-family: 'DM Sans', 'Noto Sans KR', sans-serif; -->
+    <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <!--플러그인 필수 css cdn 연결-->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <!-- link -->
     <title>김은지 포트폴리오</title>
     <link rel="stylesheet" href="./styles/reset.css">
@@ -43,6 +48,7 @@
         </nav>
     </header>
     <main>
+        <!-- intro -->
         <div class="area intro">
             <h1>PORTFOLIO</h1>
             <p>front-end developer</p>
@@ -52,17 +58,258 @@
                 <a href="#"><img src="#" alt="">img</a>
             </div>
         </div>
+        <!-- portfolio ** developer -->
         <div class="area port_developer">
             <div class="developer_top">
-
+                <div class="left"><p>CloneCodding</p></div>
+                <div class="center">
+                    <div class="icon_move_down">
+                        <span><img src="#" alt=""></span>
+                        <span>chapter 1</span>
+                    </div>
+                </div>
+                <div class="right"><p>& App</p></div>
             </div>
-            <div class="developer_container"></div>
+            <div class="developer_container">
+                <div class="project project1">
+                    <div class="project_left">
+                        <p>01</p>
+                        <h2>Team Project</h2>
+                        <p class="brand_name">Market Kurly</p>
+                        <div class="hashtag">
+                            <span>#JavaScript</span>
+                            <span>#HTML</span>
+                            <span>#SASS</span>
+                            <span>#PHP</span>
+                            <span>#DATA.JSON</span>
+                            <span>#ChatBot API</span>
+                            <span>#Swiper API</span>
+                            <span>#GoogleMap API</span>
+                        </div>
+                    </div>
+                    <div class="project_right"><a href="#"><!--bg로 이미지 처리--></a></div>
+                </div>
+                <div class="project project2">
+                    <div class="project_left">
+                        <p>02</p>
+                        <h2>Project</h2>
+                        <p class="brand_name">ETUDE HOUSE</p>
+                        <div class="hashtag">
+                            <span>#JavaScript</span>
+                            <span>#HTML</span>
+                            <span>#SASS</span>
+                            <span>#PHP</span>
+                            <span>#DATA.JSON</span>
+                            <span>#ChatBot API</span>
+                            <span>#Swiper API</span>
+                        </div>
+                    </div>
+                    <div class="project_right"><a href="#"><!--bg로 이미지 처리--></a></div>
+                </div>
+                <div class="project project3">
+                    <div class="project_left">
+                        <p>03</p> 
+                        <h2>Team Project</h2>
+                        <p class="brand_name">Creative APP</p>
+                        <div class="hashtag">
+                            <span>#APP design</span>
+                            <span>#UI/UX</span>
+                        </div>
+                    </div>
+                    <div class="project_right"><a href="#"><!--bg로 이미지 처리--></a></div>
+                </div>
+            </div> 
         </div>
-        <div class="area port_designer"></div>
-        <div class="area profile"></div>
+        <!-- portfolio ** designer -->
+        <div class="area port_designer">
+            <!-- 상세페이지 -->
+            <div class="web_page">
+                <div class="designer_top">
+                    <div class="deco_circle">
+                        <img src="#" alt="">
+                    </div>
+                    <div class="deco_text">
+                        <p><img src="#" alt=""></p>
+                    </div>
+                </div>
+                <!-- Swiper ** start coverflow -- 상세페이지 스와이퍼 -->
+                <div class="swiper swiper1">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="#" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="#" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="#" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="#" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="#" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="#" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="#" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="#" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="#" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+                <!-- Swiper ** end -->
+                <div class="designer_comment">
+                    <h3>web</h3>
+                    <h3>product page</h3>
+                    <h3>lovememore</h3>
+                    <p>F/W 2021 GRAND OPEN 러브미모어 상세페이지</p>
+                </div>
+            </div>
+            <!-- 컨텐츠( 바이럴 / 룩북 ) -->
+            <div class="contents_box">
+                <div class="lookbook">
+                    <!-- Swiper ** start cube -- 룩북 스와이퍼 -->
+                    <div class="swiper swiper2">
+                        <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="#" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="#" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="#" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="#" alt="">
+                        </div>
+                        </div>
+                        <div class="swiper-pagination"></div>
+                    </div>
+                    <div class="contents_comment">
+                        <h2>Lookbook / Viral / Banner</h2>
+                        <div class="sub_comment">
+                            <p>Contents</p>
+                            <p>comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment comment</p>
+                            <p>more view →</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="viral">
+                    <!-- Swiper -->
+                    <div class="swiper swiper3">
+                        <div class="swiper-wrapper">
+                        <div class="swiper-slide">Slide 1</div>
+                        <div class="swiper-slide">Slide 2</div>
+                        <div class="swiper-slide">Slide 3</div>
+                        <div class="swiper-slide">Slide 4</div>
+                        <div class="swiper-slide">Slide 5</div>
+                        <div class="swiper-slide">Slide 6</div>
+                        <div class="swiper-slide">Slide 7</div>
+                        <div class="swiper-slide">Slide 8</div>
+                        <div class="swiper-slide">Slide 9</div>
+                        </div>
+                        <div class="swiper-pagination"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="banner_box">
+                <!-- 컨텐츠( 배너 ) -->
+                <div class="swiper swiper4">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">Slide 1</div>
+                        <div class="swiper-slide">Slide 2</div>
+                        <div class="swiper-slide">Slide 3</div>
+                        <div class="swiper-slide">Slide 4</div>
+                        <div class="swiper-slide">Slide 5</div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+        </div>
+        <!-- profile -->
+        <div class="area profile">
+            <h2>Skill</h2>
+        </div>
+        <!-- about -->
         <div class="area about"></div>
     </main>
+    <!-- footer -->
     <footer></footer>
     <script src="./script/script.js"></script>
+    <!--플러그인 필수 JS cdn 연결-->
+    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
+        /*   Initialize Swiper -- coverflow -- portfolio_designer   */
+        let swiper1 = new Swiper(".swiper1", {
+            effect: "coverflow",
+            grabCursor: true,
+            centeredSlides: true,
+            slidesPerView: "auto",
+            coverflowEffect: {
+                rotate: 0,
+                stretch: 0,
+                depth: 100,
+                modifier: 1,
+                slideShadows: true,
+            },
+            pagination: {
+                el: ".swiper-pagination",
+            },
+        });
+        /*   Initialize Swiper -- portfolio_lookbook   */
+        let swiper2 = new Swiper(".swiper2", {
+            effect: "cube",
+            grabCursor: true,
+            cubeEffect: {
+                shadow: true,
+                slideShadows: true,
+                shadowOffset: 20,
+                shadowScale: 0.94,
+            },
+            pagination: {
+                el: ".swiper-pagination",
+            },
+        });
+        /*   Initialize Swiper -- portfolio_viral   */
+        let swiper3 = new Swiper(".swiper3", {
+            slidesPerView: 2,
+            grid: {
+                rows: 3,
+            },
+            spaceBetween: 20,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+        });
+        // 인피니티 루프 -- banner
+        var swiper4 = new Swiper(".swiper4", {
+            slidesPerView: 1,
+            spaceBetween: 30,
+            loop: true,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
+        });
+    </script>
 </body>
-</html> 
+</html>  
