--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,  minimum-scale=1, maximum-scale=1">
     <meta name="description" content="2024년 | 프론트엔드 신입 | 웹디자이너 경력 | 김은지 포트폴리오입니다.">
     <!-- <meta name="keywords" content="프론트엔드, frontend,html,css,javascript"> -->
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./images/icon/favicon.png" type="image/x-icon">
+    <link rel="icon" href="./images/icon/favicon.png" type="image/x-icon">
     <!-- font -->
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;0,9..40,1000;1,9..40,200;1,9..40,300;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,800;1,9..40,900;1,9..40,1000&family=Noto+Sans+KR:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- font-family: 'DM Sans', font-family: 'Noto Sans KR', font-family: NewYork; -->
@@ -32,18 +35,17 @@
                     <span></span>
                 </a>
             </div>
-            <div class="logo_toggle">
+            <!-- <div class="logo_toggle">
                 <div class="toggle_bg">
                     <a href="#">front-end developer</a>
                     <a href="#">web designer</a> 
                 </div>
-            </div>
+            </div> -->
         </div>
         <nav>
-            <a href="#">INTRO</a>
+            <a href="#">MAIN</a>
             <a href="#">PORTFOLIO<span>(front-end)</span></a>
             <a href="#">PORTFOLIO<span>(designer)</span></a>
-            <a href="#">PROFILE</a>
             <a href="#">ABOUT</a>
         </nav>
     </header>
@@ -77,14 +79,18 @@
                 <div class="intro_front">
                     <h1>Eunji Kim</h1>
                     <h1>PORTFOLIO</h1>
-                    <p>front-end developer</p>
+                    <!-- <h3>2024</h3> -->
+                    <p>Web Designer</p>
+                    <p>Package Designer</p>
+                    <p>Visual Designer</p>
+                    <p>Front-end Developer</p>
                     <div class="img_animation">
                         <div class="circle"><img src="./images/intro/obj_logo.png" alt=""></div>
                         <div class="dollar"><img src="./images/intro/obj_dollar.png" alt=""></div>
                         <div class="flower"><img src="./images/intro/obj_flower.png" alt=""></div>
                     </div>
                 </div>
-                <div class="intro_web display_none">
+                <!-- <div class="intro_web display_none">
                     <h1>Eunji Kim</h1>
                     <h1>PORTFOLIO</h1>
                     <h3>2024</h3>
@@ -95,76 +101,129 @@
                     <div class="img_animation">
                         <div class="flower"><img src="./images/intro/obj_flower.png" alt=""></div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <!-- portfolio ** developer -->
-            <div class="area port_developer section">
-                <div class="developer_top">
-                    <div class="left"><p>CloneCodding</p></div>
-                    <div class="center">
-                        <div class="icon_move_down">
-                            <div class="round"></div>
-                            <div class="scroll_line"></div>
-                            <!-- <span><img src="#" alt=""></span> -->
-                            <!-- <span>chapter 1</span> -->
-                        </div>
-                    </div>
-                    <div class="right"><p>& App</p></div>
-                </div>
+            <div class="port_developer">
                 <div class="developer_container">
-                    <div class="project project1">
-                        <div class="project_left">
-                            <p>01</p>
-                            <h2>Team Project</h2>
-                            <p class="brand_name">MARKET KURLY</p>
-                            <div class="hashtag">
-                                <span>#JavaScript</span>
-                                <span>#HTML</span>
-                                <span>#SASS</span>
-                                <span>#PHP</span>
-                                <span>#DATA.JSON</span>
-                                <span>#ChatBot API</span>
-                                <span>#Swiper API</span>
-                                <span>#GoogleMap API</span>
+                    <div class="area view view_top section">
+                        <div class="developer_top">
+                            <div class="left"><p>CloneCodding</p></div>
+                            <div class="center">
+                                <div class="icon_move_down">
+                                    <div class="round"></div>
+                                    <div class="scroll_line"></div>
+                                    <!-- <span><img src="#" alt=""></span> -->
+                                    <!-- <span>chapter 1</span> -->
+                                </div>
+                            </div>
+                            <div class="right"><p>& App</p></div>
+                        </div>
+                        <div class="view_box">
+                            <h1>Team Project</h1>
+                            <div class="project project1">
+                                <div class="procject_box box1">
+                                    <div class="project_right"><a href="#"><img src="./images/portfolio/01.png" alt=""></a></div>
+                                    <div class="project_left">
+                                        <h2>MARKET KURLY</h2>
+                                        <!-- <p class="brand_name">MARKET KURLY</p> -->
+                                        <div class="hashtag">
+                                            <span>#JavaScript</span>
+                                            <span>#HTML</span>
+                                            <span>#SASS</span>
+                                            <span>#PHP</span>
+                                            <span>#DATA.JSON</span>
+                                            <span>#ChatBot API</span>
+                                            <span>#Swiper API</span>
+                                            <span>#GoogleMap API</span>
+                                        </div>
+                                        <div class="icon_go">
+                                            <a href="https://github.com/hyein7447/marketkurly_teamproject.git">GIT 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
+                                            <a href="https://www.figma.com/proto/QYzNLPR0xAtLgx121nxGRn/%EB%A7%88%EC%BC%93%EC%BB%AC%EB%A6%AC-%EA%B8%B0%ED%9A%8D%EC%84%9C?type=design&t=MGV0rer6hqggdZYD-1&scaling=contain&page-id=0%3A1&node-id=1-17&mode=design">소개페이지 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
+                                            <a href="https://yunaweb.pe.kr/marketkurly_frontend24/">사이트 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="procject_box box2">
+                                    <div class="project_right"><a href="#"><img src="./images/portfolio/03.png" alt=""><!--bg로 이미지 처리--></a></div>
+                                    <div class="project_left">
+                                        <h2>VIRENS</h2>
+                                        <!-- <p class="brand_name">CREATIVE APP</p> -->
+                                        <div class="hashtag">
+                                            <span>#APP design</span>
+                                            <span>#UI/UX</span>
+                                        </div>
+                                        <div class="icon_go">
+                                            <a href="#">소개페이지 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="project_right"><a href="#"><!--bg로 이미지 처리--></a></div>
                     </div>
-                    <div class="project project2">
-                        <div class="project_left">
-                            <p>02</p>
-                            <h2>Project</h2>
-                            <p class="brand_name">ETUDE HOUSE</p>
-                            <div class="hashtag">
-                                <span>#JavaScript</span>
-                                <span>#HTML</span>
-                                <span>#SASS</span>
-                                <span>#PHP</span>
-                                <span>#DATA.JSON</span>
-                                <span>#ChatBot API</span>
-                                <span>#Swiper API</span>
+                    <div class="area view view_second section">
+                        <div class="developer_top">
+                            <div class="left"><p>CloneCodding</p></div>
+                            <div class="center">
+                                <div class="icon_move_down">
+                                    <div class="round"></div>
+                                    <div class="scroll_line"></div>
+                                    <!-- <span><img src="#" alt=""></span> -->
+                                    <!-- <span>chapter 1</span> -->
+                                </div>
+                            </div>
+                            <div class="right"><p>it self</p></div>
+                        </div>
+                        <div class="view_box">
+                            <h1>Project</h1>
+                            <div class="project project2">
+                                <div class="procject_box box3">
+                                    <div class="project_right"><a href="#"><img src="./images/portfolio/02.png" alt=""><!--bg로 이미지 처리--></a></div>
+                                    <div class="project_left">
+                                        <h2>ETUDE HOUSE</h2>
+                                        <div class="hashtag">
+                                            <span>#JavaScript</span>
+                                            <span>#HTML</span>
+                                            <span>#SASS</span>
+                                            <span>#PHP</span>
+                                            <span>#DATA.JSON</span>
+                                            <span>#ChatBot API</span>
+                                            <span>#Swiper API</span>
+                                        </div>
+                                        <div class="icon_go">
+                                            <a href="https://github.com/eeenz/cloneCoding_ETUDE.git">GIT 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
+                                            <a href="#">소개페이지 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
+                                            <a href="http://eunz.dothome.co.kr/etude/index.html">사이트 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="procject_box box4">
+                                    <div class="project_right"><a href="#"><img src="./images/portfolio/04.png" alt=""><!--bg로 이미지 처리--></a></div>
+                                    <div class="project_left">
+                                        <h2>comming soon</h2>
+                                        <div class="hashtag">
+                                            <span>#JavaScript</span>
+                                            <span>#HTML</span>
+                                            <span>#SASS</span>
+                                            <span>#PHP</span>
+                                            <span>#DATA.JSON</span>
+                                            <span>#ChatBot API</span>
+                                            <span>#Swiper API</span>
+                                        </div>
+                                        <div class="icon_go">
+                                            <!-- <a href="#">GIT 보러가기<img src="./images/icon/arrow.svg" alt=""></a> -->
+                                        </div>                                    
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="project_right"><a href="#"><!--bg로 이미지 처리--></a></div>
-                    </div>
-                    <div class="project project3">
-                        <div class="project_left">
-                            <p>03</p> 
-                            <h2>Team Project</h2>
-                            <p class="brand_name">CREATIVE APP</p>
-                            <div class="hashtag">
-                                <span>#APP design</span>
-                                <span>#UI/UX</span>
-                            </div>
-                        </div>
-                        <div class="project_right"><a href="#"><!--bg로 이미지 처리--></a></div>
                     </div>
                 </div> 
             </div>
             <!-- portfolio ** designer -->
-            <div class="area port_designer">
+            <div class="port_designer section">
                 <!-- 상세페이지 -->
-                <div class="web_page section">
+                <div class="area web_page section">
                     <div class="designer_top">
                         <div class="deco_text">
                             <p>WEB DESIGN</p>
@@ -193,16 +252,16 @@
                     <div class="swiper swiper1">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="./images/portfolio/thumb/05.jpg" alt="">
+                                <a href="./page_01.html"><img src="./images/portfolio/thumb/05.jpg" alt=""></a>
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/portfolio/thumb/06.jpg" alt="">
+                                <a href="./page_01.html"><img src="./images/portfolio/thumb/06.jpg" alt=""></a>
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/portfolio/thumb/07.jpg" alt="">
+                                <a href="./page_01.html"><img src="./images/portfolio/thumb/07.jpg" alt=""></a>
                             </div>
                             <div class="swiper-slide">
-                                <img src="./images/portfolio/thumb/02.jpg" alt="">
+                                <a href="./page_01.html"><img src="./images/portfolio/thumb/02.jpg" alt=""></a>
                             </div>
                             <div class="swiper-slide">
                                 <img src="./images/portfolio/thumb/10.jpg" alt="">
@@ -248,7 +307,7 @@
                     </div>
                 </div>
                 <!-- 컨텐츠( 바이럴 / 룩북 ) -->
-                <div class="contents_box section">
+                <div class="area contents_box section">
                     <div class="lookbook">
                         <!-- Swiper ** start cube -- 룩북 스와이퍼 -->
                         <div class="swiper swiper2">
@@ -341,15 +400,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="banner_box section">
+                <div class="area banner_box section">
                     <!-- 컨텐츠( 배너 ) -->
                     <div class="swiper swiper4">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide">Slide 1</div>
-                            <div class="swiper-slide">Slide 2</div>
-                            <div class="swiper-slide">Slide 3</div>
-                            <div class="swiper-slide">Slide 4</div>
-                            <div class="swiper-slide">Slide 5</div>
+                            <div class="swiper-slide"><img src="./images/portfolio/banner/bnr_001.gif" alt=""></div>
+                            <div class="swiper-slide"><img src="./images/portfolio/banner/bnr_002.jpg" alt=""></div>
+                            <div class="swiper-slide"><img src="./images/portfolio/banner/bnr_004.jpg" alt=""></div>
+                            <!-- <div class="swiper-slide"><img src="./images/portfolio/banner/bnr_003.jpg" alt=""></div> -->
                         </div>
                         <div class="swiper-button-next"></div>
                         <div class="swiper-button-prev"></div>
@@ -390,17 +448,24 @@
                 <p>{ 귀한 시간으로 포트폴리오를 확인해 주셔서 감사합니다. }</p>
                 <h2>Thank You</h2>
             </div>
-            <!-- <div class="wrap">
-                <div class="container">1</div>
-                <div class="container"><h1>2</h1></div>
-                <div class="container"><h1>3</h1></div>
-                <div class="container"><h1>4</h1></div>
-            </div> -->
+            <div class="skill_pop display_none">
+                <div class="skill_box_bg">
+                    <div class="skill_javascript">
+                        <img src="./images/skill_icon/04_.jpg" alt="">
+                        <span>javaScript</span>
+                        <span>자바스크립트</span>
+                        <span>* ES6 문법을 활용한 로직 가능합니다.</span>
+                        <span>* DOM 활용 여러 함수 사용 가능합니다.</span>
+                        <span>* 이벤트 핸들링 및 콜백과 관련된 기술 활용 가능합니다.</span>
+                        <span>* 배열의 기본적 함수 사용 가능합니다.</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <!-- footer -->
     <footer></footer>
-    <script src="./script/script.js"></script>
+    <script src="./script/main.js"></script>
     <!--플러그인 필수 JS cdn 연결-->
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
@@ -488,6 +553,7 @@
                 wrap.style.top = `${page*-100}vh` //묶고있는 div(wrap)의 좌표를 -100vh로 설정 (스크롤 내릴때 -100vh만큼 가야하니까)
                 console.log(`${page*-100}vh`) // -100vh(휠한번 할때마다) -> 위아래 모두 음수처리되는 문제점발생 -> 위아래 어느방향이든 deltaY의 아래방향으로 인식
         },{passive:false},{navigation: true},{navigationPosition: 'left'},{anchors: ['section1', 'section2', 'section3']}) //이전 스크롤 기다리지 않게하는 속성 //연속 스크롤할때는 기다리지 않고 쭉 내리는 경우가 많기 때문에 스크롤을 기다리지 않는 설정이 필요
+        
         /* $('.wrap').fullpage({
             // 속성:값, 속성:값,
             scrollBar:true,//스크롤바 표시하기 (기본값 : false)
