새창으로 열기 추가

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                                             <span>#GoogleMap API</span>
                                         </div>
                                         <div class="icon_go">
-                                            <a href="https://github.com/hyein7447/marketkurly_teamproject.git">GIT 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
-                                            <a href="https://www.figma.com/proto/QYzNLPR0xAtLgx121nxGRn/%EB%A7%88%EC%BC%93%EC%BB%AC%EB%A6%AC-%EA%B8%B0%ED%9A%8D%EC%84%9C?type=design&t=MGV0rer6hqggdZYD-1&scaling=contain&page-id=0%3A1&node-id=1-17&mode=design">소개페이지 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
-                                            <a href="https://yunaweb.pe.kr/marketkurly_frontend24/">사이트 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
+                                            <a href="https://github.com/hyein7447/marketkurly_teamproject.git" target="_blank">GIT 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
+                                            <a href="https://www.figma.com/proto/QYzNLPR0xAtLgx121nxGRn/%EB%A7%88%EC%BC%93%EC%BB%AC%EB%A6%AC-%EA%B8%B0%ED%9A%8D%EC%84%9C?type=design&t=MGV0rer6hqggdZYD-1&scaling=contain&page-id=0%3A1&node-id=1-17&mode=design" target="_blank">소개페이지 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
+                                            <a href="https://yunaweb.pe.kr/marketkurly_frontend24/">사이트 보러가기<img src="./images/icon/arrow.svg" alt="" target="_blank"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -154,7 +154,7 @@
                                             <span>#UI/UX</span>
                                         </div>
                                         <div class="icon_go">
-                                            <a href="#">소개페이지 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
+                                            <a href="#">소개페이지 보러가기<img src="./images/icon/arrow.svg" alt="" target="_blank"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -191,16 +191,16 @@
                                             <span>#Swiper API</span>
                                         </div>
                                         <div class="icon_go">
-                                            <a href="https://github.com/eeenz/cloneCoding_ETUDE.git">GIT 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
-                                            <a href="#">소개페이지 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
-                                            <a href="http://eunz.dothome.co.kr/etude/index.html">사이트 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
+                                            <a href="https://github.com/eeenz/cloneCoding_ETUDE.git">GIT 보러가기<img src="./images/icon/arrow.svg" alt="" target="_blank"></a>
+                                            <a href="#">소개페이지 보러가기<img src="./images/icon/arrow.svg" alt="" target="_blank"></a>
+                                            <a href="http://eunz.dothome.co.kr/etude/index.html">사이트 보러가기<img src="./images/icon/arrow.svg" alt="" target="_blank"></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="procject_box box4">
                                     <div class="project_right"><a href="#"><img src="./images/portfolio/04.png" alt=""><!--bg로 이미지 처리--></a></div>
                                     <div class="project_left">
-                                        <h2>comming soon</h2>
+                                        <h2>SPAO</h2>
                                         <div class="hashtag">
                                             <span>#JavaScript</span>
                                             <span>#HTML</span>
@@ -252,16 +252,16 @@
                     <div class="swiper swiper1">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <a href="./page_01.html"><img src="./images/portfolio/thumb/05.jpg" alt=""></a>
+                                <a href="./page_01.html" target="_blank"><img src="./images/portfolio/thumb/05.jpg" alt=""></a>
                             </div>
                             <div class="swiper-slide">
-                                <a href="./page_01.html"><img src="./images/portfolio/thumb/06.jpg" alt=""></a>
+                                <a href="./page_01.html" target="_blank"><img src="./images/portfolio/thumb/06.jpg" alt=""></a>
                             </div>
                             <div class="swiper-slide">
-                                <a href="./page_01.html"><img src="./images/portfolio/thumb/07.jpg" alt=""></a>
+                                <a href="./page_01.html" target="_blank"><img src="./images/portfolio/thumb/07.jpg" alt=""></a>
                             </div>
                             <div class="swiper-slide">
-                                <a href="./page_01.html"><img src="./images/portfolio/thumb/02.jpg" alt=""></a>
+                                <a href="./page_01.html" target="_blank"><img src="./images/portfolio/thumb/02.jpg" alt=""></a>
                             </div>
                             <div class="swiper-slide">
                                 <img src="./images/portfolio/thumb/10.jpg" alt="">
