--- a/index.html
+++ b/index.html
@@ -485,21 +485,19 @@
             </div>
             <div class="skill_pop display_none">
                 <div class="skill_box_bg">
-                    <div class="skill_html_01">
+                    <div class="skill_html_01 display_none">
                         <img src="./images/skill_icon/01.jpg" alt="">
                         <span class="en_title">HTML5</span>
                         <span class="ko_title">에이치티엠엘</span>
                         <div class="text_contents">
                             <span>* 한국형 웹 접근성 지침을 준수한 웹표준 마크업</span>
                             <span>* VSCODE를 활용한 HTML 구성 가능합니다.</span>
-                            <!-- <span>* 이벤트 핸들링 및 콜백과 관련된 기술 활용 가능합니다.</span> -->
-                            <!-- <span>* 배열의 기본적 함수 사용 가능합니다.</span> -->
                         </div>
                     </div>
                     <div class="skill_css_02 display_none">
                         <img src="./images/skill_icon/02.jpg" alt="">
                         <span class="en_title">CSS3</span>
-                        <span class="ko_title">자바스크립트</span>
+                        <span class="ko_title">씨에스에스</span>
                         <div class="text_contents">
                             <span>* ES6 문법을 활용한 로직 가능합니다.</span>
                             <span>* DOM 활용 여러 함수 사용 가능합니다.</span>
@@ -507,7 +505,7 @@
                             <span>* 배열의 기본적 함수 사용 가능합니다.</span>
                         </div>
                     </div>
-                    <div class="skill_javascript_03 display_none">
+                    <div class="skill_javascript_03">
                         <img src="./images/skill_icon/03.jpg" alt="">
                         <span class="en_title">javaScript</span>
                         <span class="ko_title">자바스크립트</span>
@@ -633,7 +631,7 @@
             },
         });
         // 
-        /* const wrap = document.querySelector('main')
+        const wrap = document.querySelector('main')
         const container = document.querySelectorAll('.area')
         let page = 0; //스크롤값 0, 초기값
         
@@ -648,14 +646,14 @@
             wrap.style.top = `${page*-100}vh` 
             console.log(`${page*-100}vh`) 
         },{passive:false}) 
-         */
+        
         /* $('.wrap').fullpage({
             // 속성:값, 속성:값,
             scrollBar:true,
-            scrollingSpeed:1500,
+            scrollingSpeed:1200,
             navigation:true, 
             navigationPosition: 'left',
-            // navigationTooltips:['MAIN','Team Project','Self Project','Web Page','LOOKBOOK','About','Footer'],
+            // navigationTooltips:['MAIN','Team Project','Self Project','Web Page','LookBook','Skill','About'],
             // showActiveTooltip:true,
         }) */
     </script>
