--- a/index.html
+++ b/index.html
@@ -641,6 +641,7 @@
                 </div>
             </div>
         </div>
+        <div class="mouse_circle"></div>
     </main>
     <!-- footer -->
     <footer></footer>
