--- a/index.html
+++ b/index.html
@@ -212,13 +212,13 @@
                                         </div>
                                         <div class="icon_go">
                                             <a href="https://github.com/eeenz/cloneCoding_ETUDE.git" target="_blank">GIT 보러가기<img src="./images/icon/arrow.svg" alt="" ></a>
-                                            <a href="#" target="_blank">소개페이지 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
+                                            <a href="https://www.figma.com/file/0NEvkiyHVxj2m9oLHa9Kz4/%EC%97%90%EB%9B%B0%EB%93%9C-%ED%95%98%EC%9A%B0%EC%8A%A4-%EC%8A%A4%ED%83%80%EC%9D%BC%EA%B0%80%EC%9D%B4%EB%93%9C?type=design&node-id=0%3A1&mode=design&t=wvOrilDfypp5enhF-1" target="_blank">소개페이지 보러가기<img src="./images/icon/arrow.svg" alt=""></a>
                                             <a href="http://eunz.dothome.co.kr/etude/index.html" target="_blank">사이트 보러가기<img src="./images/icon/arrow.svg" alt="" ></a>
                                         </div>
                                         <div class="project_info">
                                             <p>{ 개발 인원 : 1명 - 개인프로젝트 (23.12.30 - 24.03.10) }</p>
                                             <p>{ 담당 업무 : 디자인, 기획, 프로그램 코딩 }</p>
-                                            <p>{ 제작 : 메인, 카테고리, 해더, 로그인, 상세페이지 등등 }</p>
+                                            <p>{ 제작 : 메인, 카테고리, 로그인, 회원가입, 상세페이지, php연결, data.json 등등 }</p>
                                         </div>
                                     </div>
                                 </div>
@@ -350,9 +350,9 @@
                     </div>
                     <!-- Swiper ** end -->
                     <div class="designer_comment">
-                        <h3>product page</h3>
-                        <h3>lovememore</h3>
-                        <p>F/W 2021 GRAND OPEN 러브미모어 상세페이지</p>
+                        <h3>click me ↑</h3>
+                        <h3>{ product page }</h3>
+                        <p>본인이 100% 작업한 상세페이지입니다.</p>
                     </div>
                 </div>
                 <!-- 컨텐츠( 바이럴 / 룩북 ) / 컨테이너5번 -->
@@ -464,10 +464,13 @@
                     <p>/</p>
                     <h3>{ 코드로 감성을 그리다 }</h3>
                     <p>안녕하세요<br>사용자들이 편안하고 직관적으로 서비스를 이용할 수 있도록 고민하고<br>사용자 경험을 최우선으로 생각하며<br>매력적인 디자인을 하려 노력하는 개발자 & 디자이너 김은지입니다.</p>
-                    <p><img src="./images/about/avatar2.png" alt=""></p>
+                    <a href="./images/about/Kakao_id.jpg" target="_blank" >{ PHONE : 010 - 6398 - 7954  /  KAKAO : eunji9352 }</a>
+                    <a href="mailto:dmswl7954@gmail.com">{ EMAIL : dmswl7954@gmail.com }</a>
+                    <p><img src="./images/about/avatar2.png" alt="" ta></p>
                 </div>
                 <div class="pro_right">
                     <h2>Skill</h2>
+                    <p>아래 이미지를 클릭해 보세요 :)</p>
                     <div class="skill_box">
                         <a href="#"><img src="./images/skill_icon/01.jpg" alt=""></a>
                         <a href="#"><img src="./images/skill_icon/02.jpg" alt=""></a>
@@ -707,7 +710,7 @@
         // 인피니티 루프 -- banner
         var swiper4 = new Swiper(".swiper4", {
             slidesPerView: 1,
-            autoplay:{delay:1100,},
+            autoplay:{delay:2000,},
             spaceBetween: 30,
             loop: true,
             pagination: {
