--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     <main>
         <div class="arrow_top">
-            <a href="#" id="go_to_top"><img src="./images/icon/arrow_top_bk.svg" alt="" ></a>
+            <button type="button" id="go_to_top"><img src="./images/icon/arrow_top_bk.svg" alt="" ></button>
         </div>
         <div class="wrap">
             <div class="menu_info display_none">
@@ -456,8 +456,14 @@
                         <div class="swiper-pagination"></div>
                     </div>
                 </div>
+                <!-- 컨텐츠( 패키지 ) / 컨테이너7번-->
+                <div class="area package_box section">
+                    <div class="package_contents">
+                        <a href="#"><img src="./images/portfolio/page/" alt=""></a>
+                    </div>
+                </div>
             </div>
-            <!-- profile / 컨테이너7번 -->
+            <!-- profile / 컨테이너8번 -->
             <div class="area profile section nav_tab menu_tab">
                 <div class="pro_left">
                     <h2>About</h2>
@@ -490,7 +496,7 @@
                     </div>
                 </div>
             </div>
-            <!-- about / 컨테이너8번 -->
+            <!-- about / 컨테이너9번 -->
             <div class="area about section menu_tab">
                 <div class="img_box">
                     <img src="./images/about/ttaum.png" alt="">
@@ -646,8 +652,6 @@
         </div>
         <div class="mouse_circle"></div>
     </main>
-    <!-- footer -->
-    <footer></footer>
     <script src="./script/main.js"></script>
     <!--플러그인 필수 JS cdn 연결-->
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
