--- a/index.html
+++ b/index.html
@@ -506,8 +506,14 @@
                 <!-- 컨텐츠( 패키지 ) / 컨테이너7번-->
                 <div class="area package_box section">
                     <div class="package_contents">
-                        <a href="#"><img src="./images/portfolio/page/" alt=""></a>
+                        <a href="./package_01.html" target="_blank"><img src="./images/portfolio/package/01.jpg" alt=""></a>
+                        <a href="./package_02.html" target="_blank"><img src="./images/portfolio/package/02.jpg" alt=""></a>
+                        <a href="./package_03.html" target="_blank"><img src="./images/portfolio/package/03.jpg" alt=""></a>
+                        <a href="./package_04.html" target="_blank"><img src="./images/portfolio/package/04.jpg" alt=""></a>
+                        <a href="./package_05.html" target="_blank"><img src="./images/portfolio/package/05.jpg" alt=""></a>
+                        <a href="./package_06.html" target="_blank"><img src="./images/portfolio/package/06.jpg" alt=""></a>
                     </div>
+                    <div class="package_comment"><h2>Package Design.</h2></div>
                 </div>
             </div>
             <!-- profile / 컨테이너8번 -->
@@ -785,7 +791,7 @@
             autoplay:{delay:2000}
             if(e.deltaY > 0){page++} 
             if(e.deltaY < 0){page--} 
-            if(page > 7){ page = 7} 
+            if(page > 8){ page = 8} 
             if(page < 0){page = 0}
             wrap.style.top = `${page*-100}vh` 
             console.log(`${page*-100}vh`) 
